style(result): update result section to 4-image grid with reduced scale

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="result-header reveal-on-scroll">
                 <h2 class="linear-heading">Rapidly nest <br>complex shapes.</h2>
             </div>
-            
+
             <div class="result-grid">
                 <!-- Image 1 -->
                 <div class="result-card card-1 reveal-on-scroll delay-1">
@@ -120,6 +120,22 @@
                 <div class="result-card card-2 reveal-on-scroll delay-2">
                     <div class="result-image-wrapper">
                         <img src="assets/result-2.png" alt="Nesting Result Example 2" class="result-img">
+                        <div class="glass-overlay"></div>
+                    </div>
+                </div>
+
+                <!-- Image 3 -->
+                <div class="result-card card-3 reveal-on-scroll delay-3">
+                    <div class="result-image-wrapper">
+                        <img src="assets/result-3.png" alt="Nesting Result Example 3" class="result-img">
+                        <div class="glass-overlay"></div>
+                    </div>
+                </div>
+
+                <!-- Image 4 -->
+                <div class="result-card card-4 reveal-on-scroll delay-4">
+                    <div class="result-image-wrapper">
+                        <img src="assets/result-4.png" alt="Nesting Result Example 4" class="result-img">
                         <div class="glass-overlay"></div>
                     </div>
                 </div>
