fix(result): rename images and update references for Result Blocks

--- a/index.html
+++ b/index.html
@@ -113,12 +113,10 @@
                 <div class="result-images-side reveal-on-scroll delay-1">
                     <div class="overlap-grid-2">
                         <div class="result-card card-a">
-                            <img src="assets/result-1.png" alt="Nesting Result 1" class="result-img"
-                                onerror="this.style.display='none';this.parentElement.style.background='#222'">
+                            <img src="assets/result-1.png" alt="Nesting Result 1" class="result-img">
                         </div>
                         <div class="result-card card-b">
-                            <img src="assets/result-2.png" alt="Nesting Result 2" class="result-img"
-                                onerror="this.style.display='none';this.parentElement.style.background='#333'">
+                            <img src="assets/result-2.png" alt="Nesting Result 2" class="result-img">
                         </div>
                     </div>
                 </div>
@@ -128,9 +126,7 @@
             <div class="result-block block-2">
                 <div class="side-image left reveal-on-scroll delay-1">
                     <div class="result-card card-c">
-                        <!-- Using placeholder logic if result-3/4 don't exist yet, reusing 1/2 for demo -->
-                        <img src="assets/result-1.png" alt="Nesting Result 3" class="result-img"
-                            onerror="this.style.display='none';this.parentElement.style.background='#222'">
+                        <img src="assets/result-3.png" alt="Nesting Result 3" class="result-img">
                     </div>
                 </div>
 
@@ -142,8 +138,7 @@
 
                 <div class="side-image right reveal-on-scroll delay-2">
                     <div class="result-card card-d">
-                        <img src="assets/result-2.png" alt="Nesting Result 4" class="result-img"
-                            onerror="this.style.display='none';this.parentElement.style.background='#333'">
+                        <img src="assets/result-4.png" alt="Nesting Result 4" class="result-img">
                     </div>
                 </div>
             </div>
