chore: add Pinterest meta tag

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/logo-black.png">
+    <meta name="p:domain_verify" content="f5bf5da337d654c7e3acb5007ae3606d"/>
     <script src="https://assets.lemonsqueezy.com/lemon.js" defer></script>
     <script>window.lemonSqueezyAffiliateConfig = { store: "planarnest" };</script>
     <script src="https://lmsqueezy.com/affiliate.js" defer></script>
