Update clipboard feature description

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="bento-card span-2 reveal-on-scroll delay-1">
                     <div class="card-content">
                         <h3>Seamless Clipboard Workflow</h3>
-                        <p>Stop importing and exporting files. Just copy, nest, and paste directly back into your
+                        <p>Import files, nest, and paste directly back into your
                             workflow via SVG clipboard support.</p>
                     </div>
                     <div class="card-visual visual-graph"></div>
