Add download landing page and update hero button to free download

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/logo-black.png">
-    <meta name="p:domain_verify" content="f5bf5da337d654c7e3acb5007ae3606d"/>
+    <meta name="p:domain_verify" content="f5bf5da337d654c7e3acb5007ae3606d" />
     <script src="https://assets.lemonsqueezy.com/lemon.js" defer></script>
     <script>window.lemonSqueezyAffiliateConfig = { store: "planarnest" };</script>
     <script src="https://lmsqueezy.com/affiliate.js" defer></script>
@@ -57,9 +57,8 @@
                         Stop wasting material. Zero-config nesting that pays for itself in a single job.
                     </p>
                     <div class="hero-actions reveal-on-scroll delay-3">
-                        <a href="https://planarnest.lemonsqueezy.com/checkout/buy/f40bb84a-f7a2-43ce-9e69-9ff3fe4ea5f8"
-                            class="btn btn-xl btn-primary magnetic-btn lemonsqueezy-button" id="download-btn">
-                            <span>Download for Windows</span>
+                        <a href="/download/" class="btn btn-xl btn-primary magnetic-btn" id="download-btn">
+                            <span>Download for Free</span>
                             <div class="btn-glow"></div>
                         </a>
                         <span class="sub-text">macOS coming soon</span>
