Add Buy Now button to hero section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                             <span>Download for Free</span>
                             <div class="btn-glow"></div>
                         </a>
+                        <a href="https://planarnest.lemonsqueezy.com/checkout/buy/f40bb84a-f7a2-43ce-9e69-9ff3fe4ea5f8"
+                            class="btn btn-primary magnetic-btn lemonsqueezy-button"
+                            style="padding: 16px 48px; font-size: 1.1rem;">Buy Now</a>
                         <span class="sub-text">macOS coming soon</span>
                     </div>
                 </div>
