--- a/download/index.html
+++ b/download/index.html
@@ -386,6 +386,12 @@
             </p>
         </div>
 
+        <p class="fade-up"
+            style="font-family: var(--font-display); font-size: 1.4rem; font-weight: 600; letter-spacing: -0.02em; color: rgba(255,255,255,0.85); text-align: center; margin: 36px 0 32px;">
+            How to run: Click <span style="color: #a78bfa;">'More info'</span> → <span style="color: #2dd4bf;">'Run
+                anyway'</span>
+        </p>
+
         <!-- 2. VirusTotal Result -->
         <div class="info-card fade-up">
             <div class="card-number">2</div>
