--- a/download/index.html
+++ b/download/index.html
@@ -399,13 +399,10 @@
             <p>
                 This tool is safe. Below is the VirusTotal scan result for verification.
             </p>
-            <div class="vt-placeholder">
-                <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M2.25 15.75l5.159-5.159a2.25 2.25 0 013.182 0l5.159 5.159m-1.5-1.5l1.409-1.41a2.25 2.25 0 013.182 0l2.909 2.91M3.75 21h16.5a1.5 1.5 0 001.5-1.5V5.25a1.5 1.5 0 00-1.5-1.5H3.75a1.5 1.5 0 00-1.5 1.5v14.25a1.5 1.5 0 001.5 1.5z" />
-                </svg>
-                <p>VirusTotal screenshot will be placed here</p>
-            </div>
+            <p style="margin-top: 16px;">
+                <a href="https://www.virustotal.com/gui/file/d3cb2957b91f04f97bf5fee650c409aa4f3be69d68d5e219f0c481601b86d9ba/detection"
+                    target="_blank" rel="noopener noreferrer" class="contact-link">View VirusTotal Report →</a>
+            </p>
         </div>
 
         <!-- 3. Distribution & Contact -->
