Update refund policy to non-refundable with free version notice

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -100,26 +100,17 @@
         <div class="legal-card reveal-on-scroll">
             <h1>Refund Policy</h1>
             <p><strong>PlanarNest – Refund Policy</strong><br>
-                Last updated: 2026-01-29</p>
+                Last updated: 2026-02-19</p>
 
-            <h2>Refund window</h2>
-            <p>Purchases are eligible for a refund within 14 days of the purchase date.</p>
+            <h2>Refund Policy</h2>
+            <p>All purchases are final and non-refundable.</p>
+            <p>We offer a free version of PlanarNest so that you can fully evaluate its features before purchasing.
+                We encourage you to try the free version thoroughly and make an informed decision before buying.</p>
 
-            <h2>How to request a refund</h2>
-            <p>Email <a href="mailto:contact@planarnest.com">contact@planarnest.com</a> with:</p>
-            <ul>
-                <li>order number (or receipt)</li>
-                <li>purchase email</li>
-                <li>reason (if it’s a bug, include steps to reproduce and any relevant logs/screenshots)</li>
-            </ul>
-
-            <h2>What happens on refund</h2>
-            <p>If a refund is granted, your license/activation may be revoked and access to the Software may be
-                disabled.</p>
-
-            <h2>Abuse / limitations</h2>
-            <p>We may refuse refunds in cases of clear abuse, including repeated refund requests, chargeback abuse, or
-                other fraudulent activity.</p>
+            <h2>Exceptions</h2>
+            <p>If you experience an issue that was not present in the free version but occurs after purchasing,
+                please contact us at <a href="mailto:contact@planarnest.com">contact@planarnest.com</a>
+                and we will review your case.</p>
 
             <h2>Chargebacks</h2>
             <p>Please contact us first before filing a chargeback so we can help resolve issues quickly.</p>
