--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
                 style="position:absolute; top:16px; right:20px; background:none; border:none; color:#888; font-size:1.4rem; cursor:pointer;">&times;</button>
             <h3
                 style="font-family:'Outfit',sans-serif; font-size:1.5rem; font-weight:700; color:#fff; margin-bottom:24px; letter-spacing:-0.02em;">
-                약관에 동의하시겠습니까?</h3>
+                Do you agree to the Terms?</h3>
             <p style="margin-bottom:20px;"><a href="/terms.html" target="_blank" rel="noopener noreferrer"
-                    style="color:#888; font-size:0.85rem; text-decoration:underline;">Terms 바로가기 →</a></p>
+                    style="color:#888; font-size:0.85rem; text-decoration:underline;">View Terms →</a></p>
             <label
                 style="display:flex; align-items:center; justify-content:center; gap:10px; cursor:pointer; margin-bottom:32px; color:rgba(255,255,255,0.8); font-size:0.95rem;">
                 <input type="checkbox" id="terms-checkbox"
                     style="width:18px; height:18px; accent-color:#6366f1; cursor:pointer;">
-                <span>동의합니다</span>
+                <span>I agree</span>
             </label>
             <a id="modal-buy-btn"
                 href="https://planarnest.lemonsqueezy.com/checkout/buy/f40bb84a-f7a2-43ce-9e69-9ff3fe4ea5f8"
