Remove English name from CEO, remove Discord link from footer

--- a/index.html
+++ b/index.html
@@ -309,8 +309,19 @@
         <div class="container">
             <div class="footer-links">
                 <span class="copyright">&copy; 2026 PlanarNest. All rights reserved.</span>
-                <a href="#">Discord</a>
                 <a href="terms.html">Terms</a>
+            </div>
+            <div
+                style="margin-top: 24px; padding-top: 24px; border-top: 1px solid rgba(255,255,255,0.06); font-size: 0.75rem; color: #555; line-height: 1.8;">
+                대표 (CEO): 박성준<br>
+                사업자등록번호 (Business Registration No.): 653-47-01069<br>
+                통신판매업 신고 (E-commerce Registration): 간이과세자 신고 면제 (Exempt)<br>
+                주소 (Address): 경상북도 구미시 고아읍 문장로22길 20, 107동 903호 (원호점보타운) (39148)<br>
+                (#903, 107-dong, 20, Munjang-ro 22-gil, Goa-eup, Gumi-si, Gyeongsangbuk-do, Republic of Korea)
+                (39148)<br>
+                전화 (Tel): 054-455-7772 (+82-54-455-7772)<br>
+                이메일 (Email): contact@planarnest.com<br>
+                호스팅 서비스 (Hosting): GitHub, Inc.
             </div>
         </div>
     </footer>
