Add false positive disclaimer to VirusTotal section

--- a/download/index.html
+++ b/download/index.html
@@ -403,6 +403,11 @@
                 <a href="https://www.virustotal.com/gui/file/d3cb2957b91f04f97bf5fee650c409aa4f3be69d68d5e219f0c481601b86d9ba/detection"
                     target="_blank" rel="noopener noreferrer" class="contact-link">View VirusTotal Report →</a>
             </p>
+            <p style="margin-top: 12px; font-size: 0.8rem; color: #666; line-height: 1.6;">
+                The 3 detections currently flagged on VirusTotal are AI/ML-based heuristic results and are highly likely
+                to be false positives. We have already reached out to the respective antivirus vendors to request a
+                review.
+            </p>
         </div>
 
         <!-- 3. Distribution & Contact -->
