Add Reddit Pixel tracking with download conversion event

--- a/download/index.html
+++ b/download/index.html
@@ -12,6 +12,11 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/png" href="../assets/logo-black.png">
+    <!-- Reddit Pixel -->
+    <script>
+        !function (w, d) { if (!w.rdt) { var p = w.rdt = function () { p.sendEvent ? p.sendEvent.apply(p, arguments) : p.callQueue.push(arguments) }; p.callQueue = []; var t = d.createElement("script"); t.src = "https://www.redditstatic.com/ads/pixel.js?pixel_id=a2_ik6uhcu5yqa3", t.async = !0; var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(t, s) } }(window, document); rdt('init', 'a2_ik6uhcu5yqa3'); rdt('track', 'PageVisit');
+    </script>
+    <!-- End Reddit Pixel -->
     <style>
         :root {
             --bg-void: #030005;
@@ -446,6 +451,12 @@
             <p class="download-sub">v0.1.16 Beta · Windows x64</p>
         </div>
     </div>
+
+    <script>
+        document.getElementById('download-exe-btn').addEventListener('click', function () {
+            if (typeof rdt === 'function') { rdt('track', 'Lead'); }
+        });
+    </script>
 
     <footer class="page-footer">
         <div class="container">
