--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <script src="https://assets.lemonsqueezy.com/lemon.js" defer></script>
     <script>window.lemonSqueezyAffiliateConfig = { store: "planarnest" };</script>
     <script src="https://lmsqueezy.com/affiliate.js" defer></script>
+    <!-- Reddit Pixel -->
+    <script>
+    !function(w,d){if(!w.rdt){var p=w.rdt=function(){p.sendEvent?p.sendEvent.apply(p,arguments):p.callQueue.push(arguments)};p.callQueue=[];var t=d.createElement("script");t.src="https://www.redditstatic.com/ads/pixel.js?pixel_id=a2_ik6uhcu5yqa3",t.async=!0;var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(t,s)}}(window,document);rdt('init','a2_ik6uhcu5yqa3');rdt('track', 'PageVisit');
+    </script>
+    <!-- End Reddit Pixel -->
 </head>
 
 <body>
