--- a/download/index.html
+++ b/download/index.html
@@ -393,7 +393,7 @@
 
         <p class="fade-up"
             style="font-family: var(--font-display); font-size: 1.4rem; font-weight: 600; letter-spacing: -0.02em; color: rgba(255,255,255,0.85); text-align: center; margin: 36px 0 32px;">
-            How to run: Click <span style="color: #a78bfa;">'More info'</span> → <span style="color: #2dd4bf;">'Run
+            How to run: Click <span style="color: #a78bfa;">'More info'</span> -> <span style="color: #2dd4bf;">'Run
                 anyway'</span>
         </p>
 
@@ -406,7 +406,7 @@
             </p>
             <p style="margin-top: 16px;">
                 <a href="https://www.virustotal.com/gui/file/d3cb2957b91f04f97bf5fee650c409aa4f3be69d68d5e219f0c481601b86d9ba/detection"
-                    target="_blank" rel="noopener noreferrer" class="contact-link">View VirusTotal Report →</a>
+                    target="_blank" rel="noopener noreferrer" class="contact-link">View VirusTotal Report -></a>
             </p>
             <p style="margin-top: 12px; font-size: 0.8rem; color: #666; line-height: 1.6;">
                 The 3 detections currently flagged on VirusTotal are AI/ML-based heuristic results and are highly likely
@@ -437,27 +437,18 @@
                 Thank you for your understanding.
             </p>
         </div>
-
-        <!-- Download Button -->
+        <!-- Download Notice -->
         <div class="download-cta fade-up">
-            <a href="https://github.com/junbyjun1238/Planarnest/releases/download/v0.1.16-demo/PlanarNest_0.1.16_x64-setup.exe"
-                class="download-btn" id="download-exe-btn">
-                <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                </svg>
-                Download for Windows
-            </a>
-            <p class="download-sub">v0.1.16 Beta · Windows x64</p>
+            <p class="download-sub" style="font-size: 0.95rem; opacity: 0.9;">
+                Download starts from the <strong>Download for Free</strong> button on the main page.
+            </p>
+            <p class="download-sub" style="margin-top: 10px;">
+                If the download does not start, open the official release page:
+                <a href="https://github.com/junbyjun1238/Planarnest/releases" target="_blank" rel="noopener noreferrer"
+                    class="contact-link">GitHub Releases</a>
+            </p>
         </div>
     </div>
-
-    <script>
-        document.getElementById('download-exe-btn').addEventListener('click', function () {
-            if (typeof rdt === 'function') { rdt('track', 'Lead'); }
-        });
-    </script>
-
     <footer class="page-footer">
         <div class="container">
             &copy; 2026 PlanarNest. All rights reserved.
